bookinfo/overlay/config/domain/kapoozi.com/istio/2.2.a.tls/patch/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: bookinfo-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - bookinfo.kapoozi.com
    port:
      name: http
      number: 80
      protocol: HTTP
    tls:
      httpsRedirect: true
  - hosts:
    - bookinfo.kapoozi.com
    port:
      name: https
      number: 443
      protocol: HTTPS
    tls:
      credentialName: cf-upstream-tls
      mode: SIMPLE
